# ai-agent-demo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  app_langchain_streaming.py  app_langchain_sync.py  app_langgraph.py  app_langgraph_streaming.py  app_langgraph_sync.py  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: ja.json
.claude/: context.md  decisions.md  ime-investigation.md  references.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: README.md  email_draft.py  langchain_streaming.py  langchain_sync.py  langgraph_streaming.py  langgraph_sync.py  langgraph_sync2.py
notebooks/: hello.ipynb  langgraph_basic.ipynb
public/: custom.js
src/ai_agent_demo/agent/: __init__.py  simple_chat.py
src/ai_agent_demo/common/: __init__.py  agent_base.py  base.py  state_base.py
src/ai_agent_demo/email_draft/: __init__.py  agent.py
src/ai_agent_demo/node/: __init__.py  simple_chat.py
src/ai_agent_demo/simple_chat/: __init__.py  agent.py  node.py
src/ai_agent_demo/simple_chat2/: __init__.py  agent.py  state.py
src/ai_agent_demo/state/: __init__.py  simple_chat.py
